# cinereserve

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
apps/movies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/movies/management/commands/: seed.py
apps/movies/migrations/: 0001_initial.py  0002_movie_is_active.py
apps/movies/tests/: factories.py  test_movie_create.py  test_movie_detail.py  test_movie_list.py
apps/sessions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/sessions/migrations/: 0001_initial.py  0002_reservation.py  0003_reservation_ticket_code.py
apps/sessions/tests/: factories.py  test_confirm_seat.py  test_reserve_seat.py  test_seat_generation.py  test_seat_map.py  test_sessions.py  test_ticket_code.py
apps/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_auth.py  test_models.py  test_my_tickets.py  test_register.py  test_user_list.py
config/: urls.py
config/settings/: base.py  development.py  test.py
